--- a/homework/Day_025_HW.ipynb
+++ b/homework/Day_025_HW.ipynb
@@ -305,7 +305,7 @@
      "output_type": "stream",
      "text": [
       "Linear Reg Score : 0.026876871475637953\n",
-      "Gradient Boosting Reg Score : 0.7127578985415773\n"
+      "Gradient Boosting Reg Score : 0.7115555912956479\n"
      ]
     }
    ],
@@ -513,7 +513,7 @@
      "output_type": "stream",
      "text": [
       "Linear Reg Score : 0.02648102386371094\n",
-      "Gradient Boosting Reg Score : 0.7089315371400271\n"
+      "Gradient Boosting Reg Score : 0.7082731997218562\n"
      ]
     }
    ],
@@ -709,7 +709,7 @@
      "output_type": "stream",
      "text": [
       "Linear Reg Score : 0.026080352293794552\n",
-      "Gradient Boosting Reg Score : 0.7154021743444494\n"
+      "Gradient Boosting Reg Score : 0.717701188061879\n"
      ]
     }
    ],
@@ -795,8 +795,8 @@
        "      <td>4</td>\n",
        "      <td>42</td>\n",
        "      <td>-0.025450</td>\n",
-       "      <td>0.974928</td>\n",
-       "      <td>0.573772</td>\n",
+       "      <td>-0.433884</td>\n",
+       "      <td>-0.939856</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -815,8 +815,8 @@
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "      <td>0.333601</td>\n",
-       "      <td>0.433884</td>\n",
-       "      <td>0.288482</td>\n",
+       "      <td>0.781831</td>\n",
+       "      <td>0.552435</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -835,8 +835,8 @@
        "      <td>6</td>\n",
        "      <td>11</td>\n",
        "      <td>-0.967083</td>\n",
-       "      <td>0.433884</td>\n",
-       "      <td>0.601624</td>\n",
+       "      <td>-0.781831</td>\n",
+       "      <td>0.961130</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -855,8 +855,8 @@
        "      <td>5</td>\n",
        "      <td>24</td>\n",
        "      <td>-0.888817</td>\n",
-       "      <td>0.781831</td>\n",
-       "      <td>0.987349</td>\n",
+       "      <td>-0.974928</td>\n",
+       "      <td>0.313107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -875,8 +875,8 @@
        "      <td>3</td>\n",
        "      <td>24</td>\n",
        "      <td>0.782427</td>\n",
-       "      <td>0.974928</td>\n",
-       "      <td>0.985948</td>\n",
+       "      <td>0.433884</td>\n",
+       "      <td>0.329408</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -905,11 +905,11 @@
        "4            3             25             56          3          24   \n",
        "\n",
        "   day_cycle  week_cycle  year_cycle  \n",
-       "0  -0.025450    0.974928    0.573772  \n",
-       "1   0.333601    0.433884    0.288482  \n",
-       "2  -0.967083    0.433884    0.601624  \n",
-       "3  -0.888817    0.781831    0.987349  \n",
-       "4   0.782427    0.974928    0.985948  "
+       "0  -0.025450   -0.433884   -0.939856  \n",
+       "1   0.333601    0.781831    0.552435  \n",
+       "2  -0.967083   -0.781831    0.961130  \n",
+       "3  -0.888817   -0.974928    0.313107  \n",
+       "4   0.782427    0.433884    0.329408  "
       ]
      },
      "execution_count": 8,
@@ -923,10 +923,10 @@
     "Your Code Here\n",
     "\"\"\"\n",
     "\n",
-    "df['week_cycle'] = df['dayofweek']/7\n",
+    "df['week_cycle'] = df['dayofweek']/(7/2)\n",
     "df['week_cycle'] = df['week_cycle'].map(lambda x:math.sin(x*math.pi))\n",
     "\n",
-    "df['year_cycle'] =  df.pickup_datetime.dt.dayofyear/365\n",
+    "df['year_cycle'] =  df.pickup_datetime.dt.dayofyear/(365/2)\n",
     "df['year_cycle'] = df['year_cycle'].map(lambda x:math.sin(x*math.pi))\n",
     "\n",
     "df.head()"
@@ -941,8 +941,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Reg Score : 0.02603052231889853\n",
-      "Gradient Boosting Reg Score : 0.7178903573021158\n"
+      "Linear Reg Score : 0.025451994665070088\n",
+      "Gradient Boosting Reg Score : 0.7114825631122346\n"
      ]
     }
    ],
